# AuraAssistant

./: .gitignore  main.py  pyproject.toml
core/: tools.py
src/: email_assistant.py  prompts.py  schemas.py
src/tools/: gmail_tools.py
